--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars0.githubusercontent.com/u/32708739?v=4) center;"></div>
       <div id="username"><span style="display:block;">Jash Sheth</span><a href="https://github.com/jash-05">@jash-05</a></div>
-      <div id="userbio" style="display: none;">undefined</div>
+      <div id="userbio" style="display: block;">Software Development | Machine Learning</div>
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:none;"><i class="fas fa-link"></i> &nbsp; <a href=""></a></span>
-                <span style="display:none;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; null</span>
+                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://jash-05.github.io/jash-05.github.io/">https://jash-05.github.io/jash-05.github.io/</a></span>
+                <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Mumbai, IN</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
                 <span style="display:none !important;"><a href="https://www.twitter.com/null" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.dribbble.com/null" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
-                <span style="display:block;"><a href="https://www.linkedin.com/in/https://www.linkedin.com/in/jash-sheth-05//" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
+                <span style="display:block;"><a href="https://www.linkedin.com/in/jash-sheth-05/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.medium.com/@null/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
                 </div>
                 </div>
@@ -36,6 +36,19 @@
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
+                        <a href="https://github.com/jash-05/jash-05.github.io" target="_blank">
+                        <section>
+                            <div class="section_title">jash-05.github.io</div>
+                            <div class="about_section">
+                            <span style="display:none;">undefined</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; HTML</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/jash-05/COVID19_Web_Scraper" target="_blank">
                         <section>
                             <div class="section_title">COVID19_Web_Scraper</div>
